# SC3020-Database-System-Principles-Project-1

./: .gitignore  .project  CMakeLists.txt  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: SC3020.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.egit.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.core/: savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2023/9/38/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
SC3020/: .autotools  .cproject  .project
data/: games.txt
src/: main.cpp  main.py
src/indexing/: BPlusTree.cpp  BPlusTree.h
src/storage/: Block.cpp  Block.h  MemoryPool.cpp  MemoryPool.h  Record.cpp  Record.h  memory_pool.cpp  memory_pool.h  types.h
